# Greenly

./: .env.example  .gitignore  AGENTS.md  PAYMENT_AUDIT_REPORT.md  README.md  docker-compose.yml  dynamic.yml  repomix-output.xml  traefik.yml
apps/app/: .dockerignore  .env.example  .gitignore  Dockerfile.android  pubspec.yaml  repomix-output.xml  report.md
apps/web/: .cta.json  .env.example  package.json  pnpm-lock.yaml  report.md
docs/: analysis_like_search.md  audit-api-ui-sync.md  cloud-readiness-report.md  event-contracts.md  event-driven-architecture-analysis.md  event-driven-fix-summary.md  events.md  fix_plan_avatar_upload.md  fix_plan_like_search.md  ml-engine-huggingface-migration-plan.md  mobile-android-docker.md  plan.md  seed-nesa-menu.sql  seed-nesa-products.mongo.js
docs/api/: auth.md  (+15 more)
infra/: $null  docker-compose.dev.yml  package.json
letsencrypt/: acme.json
scripts/: flutter-android-analyze.sh  flutter-android-build-aab.sh  flutter-android-build-debug.sh  flutter-android-build-release.sh  flutter-android-clean-cache.sh  flutter-android-dev-wifi.sh  flutter-android-doctor.sh  flutter-android-install-host.sh  flutter-android-logcat-host.sh  flutter-android-test.sh  health-check.sh  seed-all.ps1  seed-all.sh
services/ml-engine/: .env.example  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml  repomix-output.xml  test_redis.py
services/ml-engine/app/: config.py  deps.py  schemas.py
services/ml-engine/app/api/: eco.py  events.py  health.py  recommendation.py  search.py
services/ml-engine/app/clients/: catalog_client.py
services/ml-engine/app/core/: eco_score.py  embedding.py  ranking.py  vector_store.py
services/ml-engine/app/storage/indexes/: products.faiss  products_meta.json
services/ml-engine/app/workers/: celery_app.py  event_consumer.py  tasks.py
(+917 files in other folders)
