[project]
name = "ml-engine"
version = "0.1.0"
description = "ML service with FastAPI, Celery, RabbitMQ & FAISS"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "celery>=5.3.0",
    "amqp>=5.2.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "torch>=2.7.0",
    "python-dotenv>=1.0.1"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
